nginx_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: pjb-ingress
    annotations:
        nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
    ingressClassName: nginx
    rules:
    -   host: www.pjb.com
        http:
            paths:
            -   path:
                pathType: Prefix
                backend:
                    service:
                        name: pjb-svc 
                        port:
                           number:80
    tls:
    -   hosts:
        -   www.pjb.com
        secretName: pjb-tls
